--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Innocent Mabuza",
   "license": "ISC",
   "devDependencies": {
+    "expect": "^1.20.2",
     "mocha": "^3.0.0"
   }
 }
